[package]
name = "shreduler"
version = "0.1.0"
edition = "2021"
authors = ["Ian Ker-Seymer <ian.kerseymer@shopify.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
bitflags = "2.3.1"
bytes = "1.4.0"
futures = "0.3.28"
magnus = { version = "0.5", features = ["rb-sys-interop"] }
magnus-macros = "0.4.1"
mio = "0.8.8"
nix = "0.26.2"
rb-sys = "0.9.77"
rustix = { version = "0.38.4", features = ["process"] }
tokio = { version = "1.28.2", features = ["full", "tracing"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-tree = "0.2.4"

[dev-dependencies]
rb-sys-test-helpers = "0.1.4"

[build-dependencies]
rb-sys-env = "0.1.2"
